--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #input{
-    width: 400px;
+    width: 300px;
     height: 45px;
     border-radius: 20px;
     border: none;
@@ -16,6 +16,8 @@
     float: left;
     padding: 9px;
     margin: 2px;
+    position: relative;
+    left: 50px;
 }
 #body{
     text-align: center;
